# AWGSim

./: README.md  main.py  pyproject.toml
src/: demo.py  slabindex.py  slabindex_demo.py  slabmode.py  slabmode_demo.py  wgindex.py  wgindex1.py  wgindex_demo.py
src/awgsim/: __init__.py
src/awgsim/core/: AWG.py  Aperture.py  Field.py  SimulationOptions.py  Waveguide.py  __init__.py  analyse.py  aw.py  clamp.py  diffract.py  fpr1.py  fpr2.py  iw.py  ow.py  plotfield.py  rect.py  simulate.py  slabindex.py  slabmode.py  spectrum.py  step.py
src/awgsim/material/: Air.py  Ge.py  Material.py  Si.py  Si3N4.py  SiO2.py  __init__.py
src/awgsim/solver/: __init__.py  fpower.py  gmode.py  overlap.py  pnorm.py  rectf.py  wgindex.py  wgmode.py
