[project]
name = "awgsim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "modes>=1.0.6",
    "numpy==1.26.4",
    "pyyaml>=6.0.3",
    "scipy==1.11.4",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
